# Cooper

./: .gitignore  .gitmodules  CMakeLists.txt  Cooper.h  lhcrc
Cooper/: Cooper.h
Cooper/include/Backports/: SDL.h
Cooper/include/Game/: Entity.h  Game.h  RES.h
Cooper/include/Graphics/: Color.h  Graphics.h  TextEntity.h  TextureAtlas.h  TextureEntity.h
Cooper/include/Input/: Input.h  Keycodes.h
Cooper/include/Math/: Color.h  Math.h  Vec2.h
Cooper/include/Sound/: Sound.h
Cooper/include/Timer/: Timer.h
Cooper/include/private/Logger/: Logger.h
Cooper/src/Game/: Entity.cpp  Game.cpp  RES.cpp
Cooper/src/Graphics/: Color.cpp  Graphics.cpp  TextEntity.cpp  TextureAtlas.cpp  TextureEntity.cpp
Cooper/src/Input/: Input.cpp
Cooper/src/Macros/private/: MacrosHelpers.cpp
Cooper/src/Sound/: Sound.cpp
Cooper/src/Sound/private/: AudioLib.cpp  AudioLib.h  AudioValues.h
Cooper/src/Sound/private/SDL/: AudioValues.cpp
Cooper/src/Timer/: Timer.cpp
Cooper/src/private/Logger/: Logger.cpp
include/Game/: Game.h  RES.h
include/Graphics/: TextureEntity.h
include/Input/: Input.h
include/Macros/: Assert.h  Verify.h
include/Math/: Constants.h  Operations.h  Point.h  Rect.h  Tween.h
include/Memory/: Memory.h
include/Timer/: Timer.h
src/Game/: Game.cpp
src/Graphics/: TextEntity.cpp  TextureAtlas.cpp  TextureEntity.cpp
src/Input/: Input.cpp
src/Log/: Log.cpp
src/Sound/: Sound.cpp
src/Sound/private/emscripten/: AudioValues.cpp
src/String/: StringUtils.cpp
